something not wokring

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -3,6 +3,13 @@
 // $font-secondary: "Mango Grotesque", sans-serif;
 
 /* Colors */
+$black: #0f0f0f;
+$white: #fffaf2;
+$blue: #1e90ff;
+$workzone-background: #282828;
+$workzone-settings: #535353;
+$workzone-settings-button: #424242;
+$workzone-border: #333333;
 
 
 
