--- a/src/css/_basic.scss
+++ b/src/css/_basic.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -8,21 +9,8 @@ html, body {
   overflow-x: hidden;
 }
 
-button {
-  all:unset;
-  font-family: sans-serif;
-  font-size: 0.6rem;
-  padding: 0.2rem 0.5rem;
-  border-radius: 3px;
-  cursor: pointer;
-  transition: all 0.1s ease-in-out;
-  border: 1px solid $workzone-settings-button;
-  text-transform: uppercase;
-  background-color: $workzone-background;
-  text-align:center;
-  color: $white;
-
-  &:hover {
-    background-color: $workzone-settings-button;
-  }
+.mycontainer {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
