--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -6,10 +6,7 @@
 $black: #0f0f0f;
 $white: #fffaf2;
 $blue: #1e90ff;
-$workzone-background: #282828;
-$workzone-settings: #535353;
-$workzone-settings-button: #424242;
-$workzone-border: #333333;
+$workzone-background: #12191F;
 
 
 
