--- a/src/css/_basic.scss
+++ b/src/css/_basic.scss
@@ -4,13 +4,25 @@ body {
   padding: 0;
   font-family: sans-serif;
   font-size: 16px;
-  background-color: $workzone-background;
+  background-color: $primary;
   color: $white;
   overflow-x: hidden;
 }
 
+.page_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100vw;
+  margin: 0 auto;
+  max-width: 1440px;
+}
+
 .mycontainer {
   width: 100%;
+  padding: 0 5%;
+  height: 100%;
   max-width: 1200px;
   margin: 0 auto;
 }
