super top mega genial : filter are faster thanks to node cache aspectratio, icons implemented with functions reset home upload/download

--- a/src/css/pico.css
+++ b/src/css/pico.css
@@ -1805,6 +1805,10 @@ details summary:not([role]) {
 details summary::-webkit-details-marker {
   display: none;
 }
+::marker {
+  display: none;
+
+}
 details summary::marker {
   display: none;
 }
