--- a/src/css/_basic.scss
+++ b/src/css/_basic.scss
@@ -7,6 +7,8 @@ body {
   background-color: $primary;
   color: $white;
   overflow-x: hidden;
+  height: 100%;
+  width: 100%;
 }
 
 .page_container {
@@ -16,7 +18,7 @@ body {
   align-items: center;
   width: 100vw;
   margin: 0 auto;
-  max-width: 1440px;
+  max-width: 1500px;
 }
 
 .mycontainer {
@@ -25,4 +27,8 @@ body {
   height: 100%;
   max-width: 1200px;
   margin: 0 auto;
+}
+
+._toastContainer li {
+  list-style: none;
 }
