--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -3,11 +3,11 @@
 // $font-secondary: "Mango Grotesque", sans-serif;
 
 /* Colors */
-$black: #0f0f0f;
+$black: #081417;
 $white: #fffaf2;
 $blue: #1e90ff;
-$primary: #12191F;
-$secondary: #0E1820;
+$background-primary: #12191F;
+$background-secondary: #0E1820;
 
 
 
