--- a/src/css/_basic.scss
+++ b/src/css/_basic.scss
@@ -4,7 +4,7 @@ body {
   padding: 0;
   font-family: sans-serif;
   font-size: 16px;
-  background-color: $primary;
+  background-color: $background-primary;
   color: $white;
   overflow-x: hidden;
   height: 100%;
