filters working again need to implement new flters and i may remove opacity

--- a/src/css/_basic.scss
+++ b/src/css/_basic.scss
@@ -32,3 +32,11 @@ body {
 ._toastContainer li {
   list-style: none;
 }
+
+.gray {
+  filter: invert(100%) brightness(40%);
+}
+
+.primary {
+  color: var(--primary);
+}
