--- a/src/css/pico.css
+++ b/src/css/pico.css
@@ -1,11 +1,5 @@
 @charset "UTF-8";
-/*!
- * Pico CSS v1.5.11 (https://picocss.com)
- * Copyright 2019-2023 - Licensed under MIT
- */
-/**
- * Theme: default
- */
+
 :root {
   --font-family: "Rubik", "Segoe UI", "Roboto", "Ubuntu",
     "Cantarell", "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
@@ -1070,6 +1064,7 @@ textarea {
 
 input {
   overflow: visible;
+  cursor: pointer;
 }
 
 select {
