removing cache manually ... but all menu functions work

--- a/src/css/_basic.scss
+++ b/src/css/_basic.scss
@@ -33,10 +33,10 @@ body {
   list-style: none;
 }
 
-.gray {
-  filter: invert(100%) brightness(40%);
-}
+.button {
+  text-align: center;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
 
-.primary {
-  color: var(--primary);
 }
