--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,5 +1,1 @@
-@import "fonts";
-@import "variables";
-@import "mixins";
-@import "reset";
-@import "basic";
+@import "fonts", "variables", "mixins", "reset", "basic", "utils";
