--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -5,7 +5,7 @@
 /* Colors */
 $black: #081417;
 $white: #fffaf2;
-$blue: #1e90ff;
+$primary: hsl(190, 67%, 59%);;
 $background-primary: #12191F;
 $background-secondary: #0E1820;
 
