about to change css

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,14 +1,10 @@
-/* Fonts */
-// $font-primary: "Poppins", sans-serif;
-// $font-secondary: "Mango Grotesque", sans-serif;
-
 /* Colors */
 $black: #081417;
-$white: #fffaf2;
-$primary: hsl(190, 67%, 59%);;
+$white: hsl(205, 20%, 94%);
+$primary: hsl(190, 67%, 59%);
+$primary-hover: hsl(190, 47%, 36%);
 $background-primary: #12191F;
 $background-secondary: #0E1820;
-
 
 
 /* Screen Sizes */
