--- a/src/css/lib/_toast.scss
+++ b/src/css/lib/_toast.scss
@@ -1,5 +1,15 @@
 ._toastContainer li {
   list-style: none;
-  font-size: 1rem;
+  font-size: 1.1rem;
+  font-weight: 500;
   letter-spacing: 1px;
+  text-align: center;
+  border-left: 5px $primary solid;
+  border-radius: 5px;
+  background: $white;
+  color: $primary;
+
+  progress {
+    padding-left: 5px;
+  }
 }
