--- a/src/css/lib/_pico.scss
+++ b/src/css/lib/_pico.scss
@@ -1,7 +1,5 @@
 @charset "UTF-8";
 
-
-
 :root {
   --font-family: "Rubik", "Segoe UI", "Roboto", "Ubuntu", "Cantarell",
     "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
@@ -28,6 +26,7 @@
   --transition: 0.2s ease-in-out;
   --modal-overlay-backdrop-filter: blur(0.25rem);
 }
+
 @media (min-width: 576px) {
   :root {
     --font-size: 17px;
@@ -200,22 +199,23 @@ kbd {
 }
 
 :root {
-  --background-color: #11191f;
-  --color: hsl(205, 20%, 94%);
-  --h1-color: var(--color)
-  --h2-color: var(--color);
-  --h3-color: var(--color);
-  --h4-color: #c8d1d8;
-  --h5-color: hsl(205, 16%, 77%);
-  --h6-color: #afbbc4;
+  --background-primary: #031313;
+  --background-secondary: #0e1820;
+  --color: #d2f9f9;
+  --h1-color: #79ecec;
+  --h2-color: #20dfdf;
+  --h3-color: var(--h2-color);
+  --h4-color: var(--h2-color);
+  --h5-color: var(--h2-color);
+  --h6-color: var(--h2-color);
   --muted-color: hsl(205, 10%, 50%);
   --muted-border-color: #1f2d38;
-  --primary: hsl(190, 67%, 59%);
-  --primary-hover: hsl(208, 59%, 63%);
+  --primary: hsl(180, 75%, 40%);
+  --primary-hover: hsl(180, 75%, 45%);
   --primary-focus: rgba(5, 6, 7, 0.25);
   --primary-inverse: var(--color);
   --secondary: var(--primary);
-  --secondary-hover: var(--primary-hover);
+  --secondary-hover: var(--primary-hover)
   --secondary-focus: var(--primary-focus);
   --secondary-inverse: #fff;
   --contrast: hsl(205, 20%, 94%);
@@ -746,7 +746,6 @@ input[type="reset"],
   border-radius: var(--border-radius);
   outline: none;
   background-color: var(--background-color);
-  box-shadow: var(--box-shadow);
   color: var(--color);
   font-weight: var(--font-weight);
   font-size: 0.8rem;
