minor css to fix

--- a/src/css/_basic.scss
+++ b/src/css/_basic.scss
@@ -37,12 +37,12 @@ body {
   transition: all 150ms linear;
 }
 
-label:has([role="button"]),[role="button"] {
+label:has([role="button"]),
+[role="button"] {
   @include until($breakpoint) {
     width: 100%;
   }
 }
-
 
 .settings_container {
   p,
@@ -50,4 +50,9 @@ label:has([role="button"]),[role="button"] {
     font-size: 0.85rem;
     line-height: 0.8rem;
   }
+}
+
+
+span[role="button"] {
+  width: 100%;
 }
